# synglot

./: .gitignore  CLI_README.md  LICENSE  README.md  STRUCTURED_TRANSLATION_README.md  benchmark_mmmu.py  convert_dataset.py  generate_table.py  main.py  pyproject.toml  requirements.txt  setup.py  structured_batch_translator.py  upload.sh
docs/api/: README.md  analyze.md  dataset.md  generate.md  translate.md  utils.md
docs/cookbook/: README.md  oai_batch_translate.py  translate_gsm8k_to_mk.py
docs/examples/: analysis_examples.py  generation_examples.py  translation_examples.py
scripts/: README_translate.md  benchmark.py  lnqa_main_test.sh  mmmu.py  mmmu.sh  ocr_bib.py  ocr_pdf.py  ocr_utils.py  openrouter.py  pdf_main.py  pdf_processor.py  pdf_utils.py  sharegpt.sh  test_translation.sh  tr_and_bench.sh  translate_lnqa_nllb.py  translate_sharegpt_nllb.py  translate_vqaonline.py  vqaonline.sh
synglot/: __init__.py
synglot/analyze/: __init__.py  analyzer.py
synglot/dataset/: __init__.py  dataset.py
synglot/generate/: __init__.py  base.py  hf_generator.py  llm_generator.py  openai_generator.py
synglot/translate/: __init__.py  base.py  llm_translator.py  std_translator.py
synglot/utils/: __init__.py  batch_utils.py  config.py  dataset_utils.py  language_mappings.py  nested_utils.py  text_utils.py
tests/: test_analyze.py  test_dataset.py  test_generate.py  test_translate.py
